--- a/_publications/J12.md
+++ b/_publications/J12.md
@@ -1,5 +1,5 @@
 ---
-title: "Reconfigurable Deep Learning Augmented Channel Estimation for Vehicular Networks on System on Chip"
+title: "[J12] Reconfigurable Deep Learning Augmented Channel Estimation for Vehicular Networks on System on Chip"
 collection: publications
 category: manuscripts
 permalink: /publication/2015-10-01-paper-title-number-3
