--- a/_publications/J11.md
+++ b/_publications/J11.md
@@ -1,5 +1,5 @@
 ---
-title: "Explainable AI for Enhancing Efficiency of DL-based Channel Estimation"
+title: "[J11] Explainable AI for Enhancing Efficiency of DL-based Channel Estimation"
 collection: publications
 category: manuscripts
 permalink: /publication/2010-10-01-paper-title-number-2
