--- a/_publications/J10.md
+++ b/_publications/J10.md
@@ -1,5 +1,5 @@
 ---
-title: "Towards Explainable AI for Channel Estimation in Wireless Communications"
+title: "[J10] Towards Explainable AI for Channel Estimation in Wireless Communications"
 collection: publications
 category: manuscripts
 permalink: /publication/2009-10-01-paper-title-number-1
