--- a/_publications/J10.md
+++ b/_publications/J10.md
@@ -9,6 +9,6 @@ venue: 'IEEE Transactions on Vehicular Technology'
 [//]: # slidesurl: 'http://academicpages.github.io/files/slides1.pdf'
 paperurl: 'http://academicpages.github.io/files/paper1.pdf'
 bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:rXZbiQxVWOsJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2nsKVQ:AAZF9b8AAAAAaKrqMVQ3EsXFU56wqS6Vvw0jjMc&scisig=AAZF9b8AAAAAaKrqMXS5T_1K_dhcub3A_9MikaU&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
-citation: ' '
+[//]: # citation: ' '
 ---
 The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
