--- a/_publications/J10.md
+++ b/_publications/J10.md
@@ -7,7 +7,7 @@ excerpt: ' '
 date: 2023-12-21
 venue: 'IEEE Transactions on Vehicular Technology'
 [//]: # slidesurl: 'http://academicpages.github.io/files/slides1.pdf'
-paperurl: 'http://academicpages.github.io/files/paper1.pdf'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/10368353'
 bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:rXZbiQxVWOsJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2nsKVQ:AAZF9b8AAAAAaKrqMVQ3EsXFU56wqS6Vvw0jjMc&scisig=AAZF9b8AAAAAaKrqMXS5T_1K_dhcub3A_9MikaU&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: ' '
 ---
