--- a/_publications/J11.md
+++ b/_publications/J11.md
@@ -8,7 +8,8 @@ date: 2025-08-06
 venue: 'IEEE Transactions on Machine Learning in Communications and Networking'
 [//]: # slidesurl: 'http://academicpages.github.io/files/slides2.pdf'
 paperurl: 'https://ieeexplore.ieee.org/abstract/document/11115091'
-citation: 'A. K. Gizzini, Y. Medjahdi, A. J. Ghandour and L. Clavier, "Explainable AI for Enhancing Efficiency of DL-Based Channel Estimation," in IEEE Transactions on Machine Learning in Communications and Networking, vol. 3, pp. 976-996, 2025, doi: 10.1109/TMLCN.2025.3596548.'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:oyUkXeXOai0J:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2nqYWQ:AAZF9b8AAAAAaKrseWRuPocW6HGetCzDvYovcgA&scisig=AAZF9b8AAAAAaKrseeTkIqk4RWym2oW6lYOxeZg&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
+[//]: # citation: 'A. K. Gizzini, Y. Medjahdi, A. J. Ghandour and L. Clavier, "Explainable AI for Enhancing Efficiency of DL-Based Channel Estimation," in IEEE Transactions on Machine Learning in Communications and Networking, vol. 3, pp. 976-996, 2025, doi: 10.1109/TMLCN.2025.3596548.'
 ---
 
 The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
