--- a/_publications/J12.md
+++ b/_publications/J12.md
@@ -8,7 +8,7 @@ date: 2025-08-19
 venue: 'IEEE Transactions on Consumer Electronics'
 [//]: # slidesurl: 'http://academicpages.github.io/files/slides3.pdf'
 paperurl: 'https://ieeexplore.ieee.org/abstract/document/11130519'
-citation: 'S. A. u. haq, S. J. Darak and A. K. Gizzini, "Reconfigurable Deep Learning Augmented Channel Estimation for Vehicular Networks on System on Chip," in IEEE Transactions on Consumer Electronics, doi: 10.1109/TCE.2025.3600481.'
+[//]: # citation: 'S. A. u. haq, S. J. Darak and A. K. Gizzini, "Reconfigurable Deep Learning Augmented Channel Estimation for Vehicular Networks on System on Chip," in IEEE Transactions on Consumer Electronics, doi: 10.1109/TCE.2025.3600481.'
 ---
 
 The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
