--- a/_publications/J12.md
+++ b/_publications/J12.md
@@ -8,6 +8,7 @@ date: 2025-08-19
 venue: 'IEEE Transactions on Consumer Electronics'
 [//]: # slidesurl: 'http://academicpages.github.io/files/slides3.pdf'
 paperurl: 'https://ieeexplore.ieee.org/abstract/document/11130519'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:cAUAYiyrHt4J:scholar.google.com/&output=citation&scisdr=CgL1daADEPfklxTrGD4:AAZF9b8AAAAAaKrtAD7FXpOkXi5vJKuRp6KMdiE&scisig=AAZF9b8AAAAAaKrtAEokw9IVBZhmCYVDZ81mw8Y&scisf=4&ct=citation&cd=-1&hl=fr'
 [//]: # citation: 'S. A. u. haq, S. J. Darak and A. K. Gizzini, "Reconfigurable Deep Learning Augmented Channel Estimation for Vehicular Networks on System on Chip," in IEEE Transactions on Consumer Electronics, doi: 10.1109/TCE.2025.3600481.'
 ---
 
