--- a/_publications/J10.md
+++ b/_publications/J10.md
@@ -8,7 +8,7 @@ date: 2023-12-21
 venue: 'IEEE Transactions on Vehicular Technology'
 [//]: # slidesurl: 'http://academicpages.github.io/files/slides1.pdf'
 paperurl: 'https://ieeexplore.ieee.org/abstract/document/10368353'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:rXZbiQxVWOsJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2nsKVQ:AAZF9b8AAAAAaKrqMVQ3EsXFU56wqS6Vvw0jjMc&scisig=AAZF9b8AAAAAaKrqMXS5T_1K_dhcub3A_9MikaU&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:rXZbiQxVWOsJ:scholar.google.com/&output=citation&scisdr=CgL1daADEPfklxTrYwI:AAZF9b8AAAAAaKrtewJ0SQi4jaAvakP7LgASfhE&scisig=AAZF9b8AAAAAaKrte_whaNeFVQk64y4o5HAgeQE&scisf=4&ct=citation&cd=-1&hl=fr&scfhb=1'
 [//]: # citation: ' '
 ---
 The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
