--- a/_publications/J09.md
+++ b/_publications/J09.md
@@ -1,14 +1,14 @@
 ---
-title: "[J10] Towards Explainable AI for Channel Estimation in Wireless Communications"
+title: "[J09] RNN Based Channel Estimation in Doubly Selective Environments"
 collection: publications
 category: manuscripts
 permalink: /publication/2009-10-01-paper-title-number-1
 excerpt: ' '
-date: 2023-12-21
-venue: 'IEEE Transactions on Vehicular Technology'
+date: 2023-11-09
+venue: 'IEEE Transactions on Machine Learning in Communications and Networking'
 [//]: # slidesurl: 'http://academicpages.github.io/files/slides1.pdf'
-paperurl: 'https://ieeexplore.ieee.org/abstract/document/10368353'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:rXZbiQxVWOsJ:scholar.google.com/&output=citation&scisdr=CgL1daADEPfklxTrYwI:AAZF9b8AAAAAaKrtewJ0SQi4jaAvakP7LgASfhE&scisig=AAZF9b8AAAAAaKrte_whaNeFVQk64y4o5HAgeQE&scisf=4&ct=citation&cd=-1&hl=fr&scfhb=1'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/10314524'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:3jjZT7im8KIJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n0dGM:AAZF9b8AAAAAaKrybGOPpK0gON87KkJFGCgbNrA&scisig=AAZF9b8AAAAAaKrybOGseWqgd_jOhom5-29G4Dg&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: ' '
 ---
 The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
