--- a/_publications/J08.md
+++ b/_publications/J08.md
@@ -1,14 +1,14 @@
 ---
-title: "[J10] Towards Explainable AI for Channel Estimation in Wireless Communications"
+title: "[J08] Deep Neural Network Augmented Wireless Channel Estimation for Preamble-Based OFDM PHY on Zynq System on Chip"
 collection: publications
 category: manuscripts
 permalink: /publication/2009-10-01-paper-title-number-1
 excerpt: ' '
-date: 2023-12-21
-venue: 'IEEE Transactions on Vehicular Technology'
+date: 2023-05-19
+venue: 'IEEE Transactions on Very Large Scale Integration (VLSI) Systems'
 [//]: # slidesurl: 'http://academicpages.github.io/files/slides1.pdf'
-paperurl: 'https://ieeexplore.ieee.org/abstract/document/10368353'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:rXZbiQxVWOsJ:scholar.google.com/&output=citation&scisdr=CgL1daADEPfklxTrYwI:AAZF9b8AAAAAaKrtewJ0SQi4jaAvakP7LgASfhE&scisig=AAZF9b8AAAAAaKrte_whaNeFVQk64y4o5HAgeQE&scisf=4&ct=citation&cd=-1&hl=fr&scfhb=1'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/10129990'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:V0J5o_xP5eAJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n1Qvw:AAZF9b8AAAAAaKrzWvxb6cyHBsMr5DTIMRQ50R8&scisig=AAZF9b8AAAAAaKrzWukl_l0YlhW2ofbId2LiK4U&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: ' '
 ---
 The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
