--- a/_publications/J07.md
+++ b/_publications/J07.md
@@ -1,14 +1,14 @@
 ---
-title: "[J10] Towards Explainable AI for Channel Estimation in Wireless Communications"
+title: "[J07] A Survey on Deep Learning Based Channel Estimation in Doubly Dispersive Environments"
 collection: publications
 category: manuscripts
 permalink: /publication/2009-10-01-paper-title-number-1
 excerpt: ' '
-date: 2023-12-21
-venue: 'IEEE Transactions on Vehicular Technology'
+date: 2022-07-04
+venue: 'IEEE Access'
 [//]: # slidesurl: 'http://academicpages.github.io/files/slides1.pdf'
-paperurl: 'https://ieeexplore.ieee.org/abstract/document/10368353'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:rXZbiQxVWOsJ:scholar.google.com/&output=citation&scisdr=CgL1daADEPfklxTrYwI:AAZF9b8AAAAAaKrtewJ0SQi4jaAvakP7LgASfhE&scisig=AAZF9b8AAAAAaKrte_whaNeFVQk64y4o5HAgeQE&scisf=4&ct=citation&cd=-1&hl=fr&scfhb=1'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/9813719'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:5myxKrTVfj0J:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2nyHOo:AAZF9b8AAAAAaKr0BOr-TIXJOD-p4xlUByvcMU0&scisig=AAZF9b8AAAAAaKr0BEaAxfv5ZDvOzaDzuippRKk&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: ' '
 ---
 The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
