--- a/_publications/J04.md
+++ b/_publications/J04.md
@@ -1,14 +1,14 @@
 ---
-title: "[J10] Towards Explainable AI for Channel Estimation in Wireless Communications"
+title: "[J04] MUSA Grant-Free Access Framework and Blind Detection Receiver"
 collection: publications
 category: manuscripts
 permalink: /publication/2009-10-01-paper-title-number-1
 excerpt: ' '
-date: 2023-12-21
-venue: 'IEEE Transactions on Vehicular Technology'
+date: 2021-07-12
+venue: 'Journal of Communication and Information Systems'
 [//]: # slidesurl: 'http://academicpages.github.io/files/slides1.pdf'
-paperurl: 'https://ieeexplore.ieee.org/abstract/document/10368353'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:rXZbiQxVWOsJ:scholar.google.com/&output=citation&scisdr=CgL1daADEPfklxTrYwI:AAZF9b8AAAAAaKrtewJ0SQi4jaAvakP7LgASfhE&scisig=AAZF9b8AAAAAaKrte_whaNeFVQk64y4o5HAgeQE&scisf=4&ct=citation&cd=-1&hl=fr&scfhb=1'
+paperurl: 'https://jcis.sbrt.org.br/jcis/article/view/771'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:PwuCmI3qKyoJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2nz-QQ:AAZF9b8AAAAAaKr14QQ7CTcpg4QheJh6dSHja_8&scisig=AAZF9b8AAAAAaKr14aiS4H3FzHXHgpORUVEp5WI&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: ' '
 ---
 The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
