--- a/_publications/C14.md
+++ b/_publications/C14.md
@@ -7,6 +7,7 @@ excerpt: ' '
 date: 2025-07-77
 venue: '2025 IEEE International Mediterranean Conference on Communications and Networking (MeditCom)'
 paperurl: 'https://hal.science/hal-05088548/'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:JOacV3wahRUJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n8QS4:AAZF9b8AAAAAaKr6WS5IFvvD0bR7FcA57B25_C0&scisig=AAZF9b8AAAAAaKr6WdtLLtrjDZSK9ITJfGLbosk&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
 
