--- a/_publications/C13.md
+++ b/_publications/C13.md
@@ -1,13 +1,13 @@
 ---
-title: "[C14] Secrecy Energy-Efficient Solution in Multi-User NOMA-Enabled Ambient Backscattering"
+title: "[C13] Secure Transmission in NOMA Systems: An Efficient Resource Allocation Strategy Using Deep Learning"
 collection: publications
 category: conferences
 permalink: /publication/2024-02-17-paper-title-number-4
 excerpt: ' '
-date: 2025-07-77
-venue: '2025 IEEE International Mediterranean Conference on Communications and Networking (MeditCom)'
-paperurl: 'https://hal.science/hal-05088548/'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:JOacV3wahRUJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n8QS4:AAZF9b8AAAAAaKr6WS5IFvvD0bR7FcA57B25_C0&scisig=AAZF9b8AAAAAaKr6WdtLLtrjDZSK9ITJfGLbosk&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
+date: 2024-11-25
+venue: '2024 IEEE Conference on Standards for Communications and Networking (CSCN)'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/10849738'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:ttuAIgmb0IgJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n6zSY:AAZF9b8AAAAAaKr81SZDLelps6yyOi6j62HrtSk&scisig=AAZF9b8AAAAAaKr81Ss-T3NnpZ6etXB5rYiVRPI&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
 
