--- a/_publications/C12.md
+++ b/_publications/C12.md
@@ -1,13 +1,13 @@
 ---
-title: "[C14] Secrecy Energy-Efficient Solution in Multi-User NOMA-Enabled Ambient Backscattering"
+title: "[C12] GRACE: Gradient-based XAI Scheme for Channel Estimation in Wireless Communications"
 collection: publications
 category: conferences
 permalink: /publication/2024-02-17-paper-title-number-4
 excerpt: ' '
-date: 2025-07-77
-venue: '2025 IEEE International Mediterranean Conference on Communications and Networking (MeditCom)'
-paperurl: 'https://hal.science/hal-05088548/'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:JOacV3wahRUJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n8QS4:AAZF9b8AAAAAaKr6WS5IFvvD0bR7FcA57B25_C0&scisig=AAZF9b8AAAAAaKr6WdtLLtrjDZSK9ITJfGLbosk&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
+date: 2025-07-08
+venue: '2024 IEEE International Mediterranean Conference on Communications and Networking (MeditCom)'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/10621232'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:lOLhglECyOEJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n7LXY:AAZF9b8AAAAAaKr9NXaJUjq6JD3JbIe30ydRtNM&scisig=AAZF9b8AAAAAaKr9NUDDyYmTcyu5t0vRZQ7Tc2U&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
 
