--- a/_publications/C11.md
+++ b/_publications/C11.md
@@ -1,13 +1,13 @@
 ---
-title: "[C14] Secrecy Energy-Efficient Solution in Multi-User NOMA-Enabled Ambient Backscattering"
+title: "[C11] Extending GradCam-based XAI methods for Remote Sensing Imagery Segmentation"
 collection: publications
 category: conferences
 permalink: /publication/2024-02-17-paper-title-number-4
 excerpt: ' '
-date: 2025-07-77
-venue: '2025 IEEE International Mediterranean Conference on Communications and Networking (MeditCom)'
-paperurl: 'https://hal.science/hal-05088548/'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:JOacV3wahRUJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n8QS4:AAZF9b8AAAAAaKr6WS5IFvvD0bR7FcA57B25_C0&scisig=AAZF9b8AAAAAaKr6WdtLLtrjDZSK9ITJfGLbosk&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
+date: 2024-07-03
+venue: 'The 5th International Electronic Conference on Remote Sensing session Remote sensing applications'
+paperurl: 'https://sciforum.net/paper/view/18027'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:3RvEGNQsXiEJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n4DSQ:AAZF9b8AAAAAaKr-FST9C8EXrCJwPtfrHoxWoCk&scisig=AAZF9b8AAAAAaKr-FYRF2DpoRnasPs2ipiyAp3Q&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
 
