--- a/_publications/C10.md
+++ b/_publications/C10.md
@@ -1,13 +1,13 @@
 ---
-title: "[C14] Secrecy Energy-Efficient Solution in Multi-User NOMA-Enabled Ambient Backscattering"
+title: "[C10] Low Complexity Deep Learning Aided Channel Estimation Architecture for Vehicular Networks"
 collection: publications
 category: conferences
 permalink: /publication/2024-02-17-paper-title-number-4
 excerpt: ' '
-date: 2025-07-77
-venue: '2025 IEEE International Mediterranean Conference on Communications and Networking (MeditCom)'
-paperurl: 'https://hal.science/hal-05088548/'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:JOacV3wahRUJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n8QS4:AAZF9b8AAAAAaKr6WS5IFvvD0bR7FcA57B25_C0&scisig=AAZF9b8AAAAAaKr6WdtLLtrjDZSK9ITJfGLbosk&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
+date: 2024-05-19
+venue: '2024 IEEE International Symposium on Circuits and Systems (ISCAS)'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/10557931'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:_WVoYneWo4IJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n4jR0:AAZF9b8AAAAAaKr-lR1s1YcVMx8FjsorvsGrPYA&scisig=AAZF9b8AAAAAaKr-lRRrj1vZpZpOnz0LOnLOXlo&scisf=4&ct=citation&cd=-1&hl=en'
 [//]: # citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
 
