--- a/_publications/C08.md
+++ b/_publications/C08.md
@@ -1,13 +1,13 @@
 ---
-title: "[C14] Secrecy Energy-Efficient Solution in Multi-User NOMA-Enabled Ambient Backscattering"
+title: "[C08] Deep Learning Based Channel Estimation in High Mobility Communications Using Bi-RNN Networks"
 collection: publications
 category: conferences
 permalink: /publication/2024-02-17-paper-title-number-4
 excerpt: ' '
-date: 2025-07-77
-venue: '2025 IEEE International Mediterranean Conference on Communications and Networking (MeditCom)'
-paperurl: 'https://hal.science/hal-05088548/'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:JOacV3wahRUJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n8QS4:AAZF9b8AAAAAaKr6WS5IFvvD0bR7FcA57B25_C0&scisig=AAZF9b8AAAAAaKr6WdtLLtrjDZSK9ITJfGLbosk&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
+date: 2023-05-28
+venue: 'ICC 2023-IEEE International Conference on Communications'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/10278783'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:zmQA5CGZ8KAJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2gGHYc:AAZF9b8AAAAAaKsABYd6W6zzEZAvCW_WSke2khg&scisig=AAZF9b8AAAAAaKsABYT5jzohVTSFMWeMJh0g75A&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
 
