--- a/_publications/C07.md
+++ b/_publications/C07.md
@@ -1,13 +1,13 @@
 ---
-title: "[C14] Secrecy Energy-Efficient Solution in Multi-User NOMA-Enabled Ambient Backscattering"
+title: "[C07] Performance Comparison of IEEE 802.11p, 802.11bd-draft and a Unique-Word-based PHY in Doubly-Dispersive Channels"
 collection: publications
 category: conferences
 permalink: /publication/2024-02-17-paper-title-number-4
 excerpt: ' '
-date: 2025-07-77
-venue: '2025 IEEE International Mediterranean Conference on Communications and Networking (MeditCom)'
-paperurl: 'https://hal.science/hal-05088548/'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:JOacV3wahRUJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n8QS4:AAZF9b8AAAAAaKr6WS5IFvvD0bR7FcA57B25_C0&scisig=AAZF9b8AAAAAaKr6WdtLLtrjDZSK9ITJfGLbosk&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
+date: 2022-04-10
+venue: '2022 IEEE Wireless Communications and Networking Conference (WCNC)'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/9771810'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:OSOy0ENzP-4J:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2gGbW0:AAZF9b8AAAAAaKsAdW3ARehRQpVeExYhhjD6iAg&scisig=AAZF9b8AAAAAaKsAdWazxsGP9sRzRO6wVszxd_g&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
 
