--- a/_publications/C06.md
+++ b/_publications/C06.md
@@ -1,13 +1,13 @@
 ---
-title: "[C14] Secrecy Energy-Efficient Solution in Multi-User NOMA-Enabled Ambient Backscattering"
+title: "[C06] Temporal Averaging LSTM-based Channel Estimation Scheme for IEEE 802.11p Standard"
 collection: publications
 category: conferences
 permalink: /publication/2024-02-17-paper-title-number-4
 excerpt: ' '
-date: 2025-07-77
-venue: '2025 IEEE International Mediterranean Conference on Communications and Networking (MeditCom)'
-paperurl: 'https://hal.science/hal-05088548/'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:JOacV3wahRUJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n8QS4:AAZF9b8AAAAAaKr6WS5IFvvD0bR7FcA57B25_C0&scisig=AAZF9b8AAAAAaKr6WdtLLtrjDZSK9ITJfGLbosk&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
+date: 2021-12-07
+venue: '2021 IEEE global communications conference (GLOBECOM)'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/9685409'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:pk4XADpGa-oJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2gGxmM:AAZF9b8AAAAAaKsA3mPyOfovMGF1w0mHfgegMbc&scisig=AAZF9b8AAAAAaKsA3sgQaNYKVIIO079nhML6x-4&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
 
