--- a/_publications/C05.md
+++ b/_publications/C05.md
@@ -1,13 +1,13 @@
 ---
-title: "[C14] Secrecy Energy-Efficient Solution in Multi-User NOMA-Enabled Ambient Backscattering"
+title: "[C05] Joint TRFI and Deep Learning for Vehicular Channel Estimation"
 collection: publications
 category: conferences
 permalink: /publication/2024-02-17-paper-title-number-4
 excerpt: ' '
-date: 2025-07-77
-venue: '2025 IEEE International Mediterranean Conference on Communications and Networking (MeditCom)'
-paperurl: 'https://hal.science/hal-05088548/'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:JOacV3wahRUJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n8QS4:AAZF9b8AAAAAaKr6WS5IFvvD0bR7FcA57B25_C0&scisig=AAZF9b8AAAAAaKr6WdtLLtrjDZSK9ITJfGLbosk&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
+date: 2020-12-07
+venue: '2020 IEEE Globecom Workshops (GC Wkshps)'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/9367412'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:biJdcmk3udoJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2gHRSA:AAZF9b8AAAAAaKsBXSCPpA5Oq8Yp1YFWBpjBX2c&scisig=AAZF9b8AAAAAaKsBXdfXzCVUf33Nx3y82vjUKvs&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
 
