--- a/_publications/C04.md
+++ b/_publications/C04.md
@@ -1,13 +1,13 @@
 ---
-title: "[C14] Secrecy Energy-Efficient Solution in Multi-User NOMA-Enabled Ambient Backscattering"
+title: "[C03] Adaptive Channel Estimation based on Deep Learning"
 collection: publications
 category: conferences
 permalink: /publication/2024-02-17-paper-title-number-4
 excerpt: ' '
-date: 2025-07-77
-venue: '2025 IEEE International Mediterranean Conference on Communications and Networking (MeditCom)'
-paperurl: 'https://hal.science/hal-05088548/'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:JOacV3wahRUJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n8QS4:AAZF9b8AAAAAaKr6WS5IFvvD0bR7FcA57B25_C0&scisig=AAZF9b8AAAAAaKr6WdtLLtrjDZSK9ITJfGLbosk&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
+date: 2020-11-18
+venue: '2020 IEEE 92nd Vehicular Technology Conference (VTC2020-Fall)'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/9348501'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:5kCewwFHidwJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2gH0YA:AAZF9b8AAAAAaKsByYCv-PQzHsVq0V98aeMXhac&scisig=AAZF9b8AAAAAaKsByYKy-qjJMtg2ojPaNXO4d9M&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
 
