--- a/_publications/C02.md
+++ b/_publications/C02.md
@@ -1,13 +1,13 @@
 ---
-title: "[C14] Secrecy Energy-Efficient Solution in Multi-User NOMA-Enabled Ambient Backscattering"
+title: "[C02] Autonomous Vehicle Detection and Classification in High Resolution Satellite Imagery"
 collection: publications
 category: conferences
 permalink: /publication/2024-02-17-paper-title-number-4
 excerpt: ' '
-date: 2025-07-77
-venue: '2025 IEEE International Mediterranean Conference on Communications and Networking (MeditCom)'
-paperurl: 'https://hal.science/hal-05088548/'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:JOacV3wahRUJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n8QS4:AAZF9b8AAAAAaKr6WS5IFvvD0bR7FcA57B25_C0&scisig=AAZF9b8AAAAAaKr6WdtLLtrjDZSK9ITJfGLbosk&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
+date: 2018-11-28
+venue: '2018 International Arab Conference on Information Technology (ACIT)'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/8672712'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:Oko8Wyv8V0AJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2gElhQ:AAZF9b8AAAAAaKsCjhTAr2zTf54IBqYnAT_snHQ&scisig=AAZF9b8AAAAAaKsCjmanVxGXOpsaAJ5E7ziiDxU&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
 
