--- a/_publications/C01.md
+++ b/_publications/C01.md
@@ -1,13 +1,13 @@
 ---
-title: "[C14] Secrecy Energy-Efficient Solution in Multi-User NOMA-Enabled Ambient Backscattering"
+title: "[C01] Post-War Building Damage Detection"
 collection: publications
 category: conferences
 permalink: /publication/2024-02-17-paper-title-number-4
 excerpt: ' '
-date: 2025-07-07
-venue: '2025 IEEE International Mediterranean Conference on Communications and Networking (MeditCom)'
-paperurl: 'https://hal.science/hal-05088548/'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:JOacV3wahRUJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n8QS4:AAZF9b8AAAAAaKr6WS5IFvvD0bR7FcA57B25_C0&scisig=AAZF9b8AAAAAaKr6WdtLLtrjDZSK9ITJfGLbosk&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
+date: 2018-03-22
+venue: 'The 2nd International Electronic Conference on Remote Sensing'
+paperurl: 'https://www.mdpi.com/2504-3900/2/7/359'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:jeaslD8wppsJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2gE7A4:AAZF9b8AAAAAaKsC9A5nLPIc9S7bdQJIP2uHgNo&scisig=AAZF9b8AAAAAaKsC9CDUetW_46eglz-Ft05XB6I&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
 
