--- a/_publications/B01.md
+++ b/_publications/B01.md
@@ -1,13 +1,13 @@
 ---
-title: "[C14] Secrecy Energy-Efficient Solution in Multi-User NOMA-Enabled Ambient Backscattering"
+title: "[B1] Chapter Four - XAI for wireless communications"
 collection: publications
-category: conferences
+category: books
 permalink: /publication/2024-02-17-paper-title-number-4
 excerpt: ' '
-date: 2025-07-77
-venue: '2025 IEEE International Mediterranean Conference on Communications and Networking (MeditCom)'
-paperurl: 'https://hal.science/hal-05088548/'
-bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:JOacV3wahRUJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n8QS4:AAZF9b8AAAAAaKr6WS5IFvvD0bR7FcA57B25_C0&scisig=AAZF9b8AAAAAaKr6WdtLLtrjDZSK9ITJfGLbosk&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
+date: 2025-01-01
+venue: 'Explainable AI for Communications and Networking'
+paperurl: 'https://www.sciencedirect.com/science/article/abs/pii/B978044329135700014X'
+bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:VQUbtCaKTg0J:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2gCeLs:AAZF9b8AAAAAaKsEYLuMeNLyDEDw3MoRAaMx23U&scisig=AAZF9b8AAAAAaKsEYMteMb6n6xAi_UiqFMSHN0g&scisf=4&ct=citation&cd=-1&hl=en'
 [//]: # citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
 
