--- a/_talks/T5.md
+++ b/_talks/T5.md
@@ -1,11 +1,11 @@
 ---
-title: "Talk 2 on Relevant Topic in Your Field"
+title: "Towards Explainable AI for Channel Estimation in Wireless Communications"
 collection: talks
-type: "Talk"
+type: "Data & AI Training School"
 permalink: /talks/2014-02-01-talk-2
-venue: "London School of Testing"
-date: 2014-02-01
-location: "London, UK"
+venue: "IMT Atlantique"
+date: 2023-11-09
+location: "Nantes, France"
 ---
 
 [More information here](http://example2.com)
