--- a/_talks/T6.md
+++ b/_talks/T6.md
@@ -8,4 +8,4 @@ date: 2024-04-18
 location: "Evry, France"
 ---
 
-This is a description of your conference proceedings talk, note the different field in type. You can put anything in this field.
+[//]: # This is a description of your conference proceedings talk, note the different field in type. You can put anything in this field.
