--- a/_talks/T6.md
+++ b/_talks/T6.md
@@ -2,7 +2,7 @@
 title: "Advanced Explainable AI in Wireless Communications"
 collection: talks
 type: "Invited Talk by Prof. Saïd Assar"
-permalink: /talks/2014-03-01-talk-3
+[//]: # permalink: /talks/2014-03-01-talk-3
 venue: "Institut Mines-Télécom Business School"
 date: 2024-04-18
 location: "Evry, France"
