--- a/_services/T1.md
+++ b/_services/T1.md
@@ -1,10 +1,10 @@
 ---
-title: "Deep Learning Based Channel Estimation In High Mobility Communications"
-collection: talks
-type: "6G Training School"
-permalink: /talks/2012-03-01-talk-1
-venue: "New York University"
-date: 2022-11-02
-location: "Abu Dhabi, UAE"
+title: "IEEE Consumer Communications and Networking Conference (CCNC)"
+collection: services
+type: ""
+permalink: /services/2012-03-01-talk-1
+venue: ""
+date: 2026-01-09
+location: "Las Vegas, NV, USA"
 ---
 
