--- a/_services/T1.md
+++ b/_services/T1.md
@@ -1,10 +1,10 @@
 ---
 title: "IEEE Consumer Communications and Networking Conference (CCNC)"
 collection: services
-type: ""
+type: "Las Vegas"
 permalink: /services/2012-03-01-talk-1
-venue: ""
+venue: "NV"
 date: 2026-01-09
-location: "Las Vegas, NV, USA"
+location: "USA"
 ---
 
