--- a/_services/S2.md
+++ b/_services/S2.md
@@ -1,10 +1,10 @@
 ---
-title: "Deep Learning Based Channel Estimation In High Mobility Communications"
-collection: talks
-type: "6G Training School"
-permalink: /talks/2012-03-01-talk-1
-venue: "New York University"
-date: 2022-11-02
-location: "Abu Dhabi, UAE"
+title: "IEEE International Conference on Communications (ICC)"
+collection: services
+type: "La Nuvola Convention Center"
+permalink: /services/2012-03-01-talk-1
+venue: "Rome"
+date: 2023-05-28
+location: "Italy"
 ---
 
