--- a/_services/S3.md
+++ b/_services/S3.md
@@ -1,10 +1,10 @@
 ---
-title: "Deep Learning Based Channel Estimation In High Mobility Communications"
-collection: talks
-type: "6G Training School"
-permalink: /talks/2012-03-01-talk-1
-venue: "New York University"
-date: 2022-11-02
-location: "Abu Dhabi, UAE"
+title: "IEEE International Conference on Communications (ICC)"
+collection: services
+type: "Denver"
+permalink: /services/2012-03-01-talk-1
+venue: "CO"
+date: 2024-06-09
+location: "USA"
 ---
 
