--- a/_services/S5.md
+++ b/_services/S5.md
@@ -1,10 +1,10 @@
 ---
-title: "Deep Learning Based Channel Estimation In High Mobility Communications"
-collection: talks
-type: "6G Training School"
-permalink: /talks/2012-03-01-talk-1
-venue: "New York University"
-date: 2022-11-02
-location: "Abu Dhabi, UAE"
+title: "IEEE Global Communications Conference (GLOBECOM)"
+collection: services
+type: "Taipei International Convention Center (TICC)"
+permalink: /services/2012-03-01-talk-1
+venue: "Taipei"
+date: 2025-12-08
+location: "Taiwan"
 ---
 
