--- a/_services/S6.md
+++ b/_services/S6.md
@@ -1,10 +1,10 @@
 ---
-title: "Deep Learning Based Channel Estimation In High Mobility Communications"
-collection: talks
-type: "6G Training School"
-permalink: /talks/2012-03-01-talk-1
-venue: "New York University"
-date: 2022-11-02
-location: "Abu Dhabi, UAE"
+title: "IEEE International Mediterranean Conference on Communications and Networking (MeditCom)"
+collection: services
+type: "Hotel Emperador"
+permalink: /services/2012-03-01-talk-1
+venue: "Madrid"
+date: 2024-07-08
+location: "Spain"
 ---
 
