--- a/_services/S7.md
+++ b/_services/S7.md
@@ -1,10 +1,10 @@
 ---
-title: "Deep Learning Based Channel Estimation In High Mobility Communications"
-collection: talks
-type: "6G Training School"
-permalink: /talks/2012-03-01-talk-1
-venue: "New York University"
-date: 2022-11-02
-location: "Abu Dhabi, UAE"
+title: "15th International Conference on COMmunication Systems & NETworkS (COMSNETS)"
+collection: services
+type: "Chancery Pavilion Hotel"
+permalink: /services/2012-03-01-talk-1
+venue: "Bengaluru"
+date: 2023-01-03
+location: "India"
 ---
 
