--- a/_services/S8.md
+++ b/_services/S8.md
@@ -1,10 +1,10 @@
 ---
-title: "Deep Learning Based Channel Estimation In High Mobility Communications"
-collection: talks
-type: "6G Training School"
-permalink: /talks/2012-03-01-talk-1
-venue: "New York University"
-date: 2022-11-02
-location: "Abu Dhabi, UAE"
+title: "IEEE International Conference on Machine Learning for Communication and Networking (ICMLCN)"
+collection: services
+type: "KTH Royal Institute of Technology"
+permalink: /services/2012-03-01-talk-1
+venue: "Stockholm"
+date: 2024-05-05
+location: "Sweden"
 ---
 
