--- a/_teaching/IMT231.md
+++ b/_teaching/IMT231.md
@@ -8,4 +8,4 @@ date: 2023-02-25
 location: "Lille, France"
 ---
 
-Keywords: Wireless Channel, OFDM, MIMO, Diversity, V2X Communications, IEEE 802.11p, IEEE 802.11bd, LTE-V2X, 5G NR-V2X,
+Keywords: Wireless Channel, OFDM, MIMO, Diversity, V2X Communications, IEEE 802.11p, IEEE 802.11bd, LTE-V2X, 5G NR-V2X.
