Fix venue formatting in C15.md

--- a/_publications/C15.md
+++ b/_publications/C15.md
@@ -5,7 +5,7 @@ category: conferences
 permalink: /publication/2024-02-17-paper-title-number-4
 excerpt: ' '
 date: 2025-09-30
-venue: '2 2025 IEEE 101st Vehicular Technology Conference (VTC2025-Spring)'
+venue: '2025 IEEE 101st Vehicular Technology Conference (VTC2025-Spring)'
 paperurl: 'https://ieeexplore.ieee.org/abstract/document/11174398'
 # bibtexurl: 'https://scholar.googleusercontent.com/scholar.bib?q=info:JOacV3wahRUJ:scholar.google.com/&output=citation&scisdr=CgL1daADENKYq2n8QS4:AAZF9b8AAAAAaKr6WS5IFvvD0bR7FcA57B25_C0&scisig=AAZF9b8AAAAAaKr6WdtLLtrjDZSK9ITJfGLbosk&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1'
 [//]: # citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
