--- a/_publications/J13.md
+++ b/_publications/J13.md
@@ -1,7 +1,7 @@
 ---
 title: "[J13] Explainable Deep Learning for Secrecy Energy-Efficiency Maximization in Ambient Backscatter Multi-User NOMA Systems"
 collection: publications
-category: manuscripts
+category: manuscripts_submitted
 permalink: /publication/2015-10-01-paper-title-number-3
 excerpt: ' '
 date: 2025-11-25
