--- a/_publications/J14.md
+++ b/_publications/J14.md
@@ -1,7 +1,7 @@
 ---
 title: "[J14] On the Ambiguity Function of OFDM-based ISAC Signals Under Non-Ideal Power Amplifiers"
 collection: publications
-category: manuscripts
+category: manuscripts_submitted
 permalink: /publication/2015-10-01-paper-title-number-3
 excerpt: ' '
 date: 2025-12-10
