--- a/_publications/C17.md
+++ b/_publications/C17.md
@@ -1,5 +1,5 @@
 ---
-title: "[C17] Entropy-Centric Explainabke AI for Remote Sensing Image Segmentation"
+title: "[C17] Entropy-Centric Explainable AI for Remote Sensing Image Segmentation"
 collection: publications
 category: manuscripts_submitted
 permalink: /publication/2024-02-17-paper-title-number-4
